<?xml version="1.0"?>
<package format="2">
  <name>ml_classifiers</name>
  <version>0.4.0</version>
  <description>ml_classifiers</description>

  <maintainer email="software@autonomoustuff.com">AutonomouStuff Software Development Team</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/ml_classifiers</url>
  <url type="repository">https://github.com/astuff/ml_classifiers</url>
  <url type="bugtracker">https://github.com/astuff/ml_classifiers/issues</url>

  <author email="sniekum@cs.utexas.edu">Scott Niekum</author>
  <author email="jwhitley@autonomoustuff.com">Joshua Whitley</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <build_depend>roslint</build_depend>

  <depend>std_msgs</depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>pluginlib</depend>
  <depend>eigen</depend>

  <exec_depend>message_runtime</exec_depend>

  <export>
    <ml_classifiers plugin="${prefix}/default_classifiers_plugin.xml"/>
  </export>
</package>
