<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ml_classifiers</name>
  <version>0.4.1</version>
  <description>ml_classifiers</description>

  <maintainer email="software@autonomoustuff.com">AutonomouStuff Software Development Team</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/ml_classifiers</url>
  <url type="repository">https://github.com/astuff/ml_classifiers</url>
  <url type="bugtracker">https://github.com/astuff/ml_classifiers/issues</url>

  <author email="sniekum@cs.utexas.edu">Scott Niekum</author>
  <author email="jwhitley@autonomoustuff.com">Joshua Whitley</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>

  <depend>rclcpp</depend>
  <depend>pluginlib</depend>
  <depend>eigen</depend>
  <depend>builtin_interfaces</depend>
  <depend>std_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
